--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "5.0.1",
+    "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
     "axios": "1.3.4",
