--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
     "axios": "1.3.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "^0.13.8",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
