--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "6.9.0",
     "react-spinners": "^0.13.8",
     "sass": "^1.62.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
